# quick_test

./: .gitignore  CMakeLists.txt  README.md  TODO.md  quick_test.sln
console_test/: CMakeLists.txt  console_test.vcxproj  main.cpp
window_test/: CMakeLists.txt  main.cpp  window_test.vcxproj
